bin/tests/snapshots/array_sorting__dd0b440dba52a4875f52bb09de61f4e3_lint_json.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  "apple"
  "Zebra"
]
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "array_sorting",
      "note": "Array elements are not in alphabetical order",
      "code": 34,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 10
            }
          },
          "message": "`\"Zebra\"` is out of alphabetical order",
          "suggestion": null
        }
      ]
    }
  ]
}
