bin/tests/snapshots/array_sorting__dd0b440dba52a4875f52bb09de61f4e3_lint_stderr.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  "apple"
  "Zebra"
]
---
[array_sorting] Warning: Array elements are not in alphabetical order
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   "Zebra"
   │   ───┬───  
   │      ╰───── "Zebra" is out of alphabetical order
───╯
