bin/tests/snapshots/array_sorting__f29a889128e4d553063b3507459cbcd6_fix.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  # about nvme
  "nvme"
  "ahci"
]
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,5 @@
 [
+  "ahci"
   # about nvme
   "nvme"
-  "ahci"
 ]
