bin/tests/snapshots/array_sorting__f29a889128e4d553063b3507459cbcd6_lint_errfmt.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  # about nvme
  "nvme"
  "ahci"
]
---
<temp_file_path>>4:3:W:34:[array_sorting] `"ahci"` is out of alphabetical order
