bin/tests/snapshots/array_sorting__f29a889128e4d553063b3507459cbcd6_lint_json.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  # about nvme
  "nvme"
  "ahci"
]
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "array_sorting",
      "note": "Array elements are not in alphabetical order",
      "code": 34,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 9
            }
          },
          "message": "`\"ahci\"` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 5,
                "column": 2
              }
            },
            "fix": "[\n  \"ahci\"\n  # about nvme\n  \"nvme\"\n]"
          }
        }
      ]
    }
  ]
}
