bin/tests/snapshots/array_sorting__f29a889128e4d553063b3507459cbcd6_lint_stderr.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  # about nvme
  "nvme"
  "ahci"
]
---
[array_sorting] Warning: Array elements are not in alphabetical order
   ╭─[ <temp_file_path>:4:3 ]
   │
 4 │   "ahci"
   │   ───┬──  
   │      ╰──── "ahci" is out of alphabetical order
───╯
